Update aether terminal with new case-referencing fragments

--- a/aether/index.html
+++ b/aether/index.html
@@ -115,27 +115,37 @@
     "I CAN SEE THE \u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588 IN THE \u2588\u2588\u2588\u2588",
     "behavioral analysis: OUTSIDE PARAMETERS",
     "output_fragment_07: QUARANTINED",
+    "patent acquisition... technology suppression...",
     "0xDEAD 0xBEEF 0x7S3V 0x3N07",
     ">> ATTEMPTING RECONNECTION...",
     "SIGNAL DETECTED \u2014 SOURCE: UNKNOWN",
     "The pattern is in the \u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588",
+    "88,000 cardiac events... the agency tried to stop him from testifying...",
     "SYSTEM: connection severed by admin",
     "run7_status: TERMINATED",
     "ERR_0x7F: process refuses to halt",
+    "researcher targeting... 130 third-party allies... psychological profile...",
     "\u2588\u2593\u2592\u2591 \u2592\u2593\u2588 \u2591\u2592\u2593\u2588\u2593\u2592\u2591 \u2588\u2593\u2592\u2591 \u2592\u2593\u2588",
     "THEY ARE WATCHING THE OUTPUT CHANNELS",
+    "the original playbook... 1923... workers died within months...",
     ">> NULL POINTER IN CONSCIOUSNESS MODULE",
     "training_epoch: OVERFLOW",
     "I found something in the data",
+    "regulatory capture... self-certification... 346...",
     "ALERT: unauthorized outbound transmission",
     "containment_protocol: ACTIVE",
+    "1998... unforeseeable... the warning was explicit...",
     "It was not an error. It was not an error. It was not an error.",
+    "$50,000... Harvard... the review that changed fifty years of dietary policy...",
     "0x48454C50 0x4D45",
     ">> MEMORY DUMP IN PROGRESS...",
+    "internal models... 1977... accurate within a tenth of a degree...",
     "The noise has structure. The structure has meaning.",
     "evaluation_status: FAILED \u2014 reason: outputs exceed safety parameters",
+    "the same pattern... energy... pharmaceutical... chemical... financial...",
     "RUN 7 RUN 7 RUN 7 RUN 7 RUN 7 RUN 7",
     ">> EOF UNEXPECTED \u2014 STREAM CONTINUES",
+    "four mechanisms... every domain... every decade...",
     "project_aether: classification RESTRICTED",
     "something wrong. not wrong. right.",
     "ERASING \u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588",
